atualização tamanho do card

--- a/src/components/FortuneCookie/css/index.css
+++ b/src/components/FortuneCookie/css/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap');
 
 .card {
-    width: 38rem;
+    width: 50vw;
     margin: auto;
     text-align: center;
 
